Mon May 18 04:48:24 GMT 2015  Olly Betts <olly@survex.com>

	* perl/t/symbol-test.t: Remove lingering use of @args, which is no
	  longer set.

Mon May 18 04:44:56 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Another update prior to 1.2.21 release.

Mon May 18 04:43:38 GMT 2015  Olly Betts <olly@survex.com>

	* ruby/smoketest.rb: Extend testcase to check returned MSet size.

Fri May 15 12:36:28 GMT 2015  Olly Betts <olly@survex.com>

	* perl/util.i.in: Just call the existing Perl Xapian::inmemory_open()
	  function rather than defining and wrapping an inline C++
	  new3_WritableDatabase() function which calls InMemory::open().

Fri May 15 05:34:00 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Another update for 1.2.21.

Fri May 15 05:05:32 GMT 2015  Olly Betts <olly@survex.com>

	* README: Add note about Python 3 support.

Fri May 15 04:54:37 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.21.

Thu May 14 13:57:00 GMT 2015  Olly Betts <olly@survex.com>

	* README: Remove the experimental marker from the Lua bindings.

Thu May 14 12:40:57 GMT 2015  Olly Betts <olly@survex.com>

	* README: Remove note about the subclassing bug with PHP 5.4 and later
	  - that was fixed in 1.2.19.

Thu May 14 12:07:03 GMT 2015  Olly Betts <olly@survex.com>

	* perl/util.i.in: Update list of unwrapped things.

Thu May 14 11:47:46 GMT 2015  Olly Betts <olly@survex.com>

	* perl/Makefile.am: Perl tests are ordering-dependent, so
	  use .NOTPARALLEL to avoid problems during parallel builds.

Thu May 14 11:28:19 GMT 2015  Olly Betts <olly@survex.com>

	* perl/Makefile.am,perl/t/collapse.t: Add test coverage for
	  Enquire::set_collapse_key() with 1 and 2 parameters.

Thu May 14 11:25:44 GMT 2015  Olly Betts <olly@survex.com>

	* perl/Makefile.am,perl/t/stem.t: Add test that we can create all the
	  stemmers returned by Stem::get_available_languages().

Thu May 14 11:17:54 GMT 2015  Olly Betts <olly@survex.com>

	* perl/Search/Xapian/,perl/docs/examples/,