@@ -1,3 +1,10 @@
+Tue May 19 05:45:48 GMT 2015  Olly Betts <olly@survex.com>
+
+	* perl/t/symbol-test.t: If the symboltest module build fails, skip the
+	  test - it's likely due to external reasons, like incompatible
+	  compiler flags being taken from Perl's Config module, due to Perl
+	  having been built with a different compiler to Xapian.
+
 Mon May 18 04:48:24 GMT 2015  Olly Betts <olly@survex.com>
 
 	* perl/t/symbol-test.t: Remove lingering use of @args, which is no
